Updating MUTABLE_AND_IMMUTABLE_COLLECTIONS.md

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
+.idea/*
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/.gitignore
 .idea/libraries/
 *.iws
 *.iml
